--- a/src/app/main/documents/conclusion/conclusion.component.html
+++ b/src/app/main/documents/conclusion/conclusion.component.html
@@ -18,8 +18,7 @@
                 Organização em Alimentos e Bebidas do Restaurante-Escola <!-- TO DO:  -->
                 Estação Bistrô com experiências em cozinha quente e fria, 
                 confeitaria, bar e atendimento ao cliente (salão), aulas 
-                teóricas e práticas. Iniciado em {{classData?.inicioTurma | date: "longDate"}} a {{classData?.fimTurma | date: "longDate"}} , 
-                com a carga horária de 1.546 horas.</p>
+                teóricas e práticas. Iniciado em {{classData?.inicioTurma | date: "longDate"}} até {{classData?.fimTurma | date: "longDate"}}.</p>
             <br/>
         </div>
         <div class="centralizar">
