--- a/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
+++ b/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
@@ -19,8 +19,7 @@
                 Estação Bistrô com experiências em cozinha quente e fria, 
                 confeitaria, bar e atendimento ao cliente (salão), aulas 
                 teóricas e práticas. Iniciado em {{classData?.inicioTurma | date: "longDate"}} com previsão de 
-                término em {{classData?.fimTurma | date: "longDate"}} , com a carga horária de 1.546 horas, 
-                de terça a sábado das 8h às 17h.</p>
+                término em {{classData?.fimTurma | date: "longDate"}}.</p>
             <br/>
         </div>
         <div class="centralizar">
