--- a/src/app/main/documents/ppe-uniform/ppe-uniform.component.html
+++ b/src/app/main/documents/ppe-uniform/ppe-uniform.component.html
@@ -38,8 +38,7 @@
         </div>
         <div>
             <br>
-            <h1 class="centralizar">CONTROLE DE RECEBIMENTO DE UNIFORME E MATERIAL 
-                TURMA XVII</h1>
+            <h1 class="centralizar">CONTROLE DE RECEBIMENTO DE UNIFORME E MATERIAL</h1>
             <p>Declaro ter recebido os itens na quantidade referente ao uniforme 
                 e ao material descritos a seguir:</p>
             <table cellspacing ="0" cellpadding="3" border = "1">
