--- a/src/app/main/documents/conclusion/conclusion.component.html
+++ b/src/app/main/documents/conclusion/conclusion.component.html
@@ -4,6 +4,26 @@
     <title>""</title>
     <meta charset="utf-8">
 </head>
+
+<header>
+    <div class="row">
+        <div class="esquerda">
+          <img src="./assets/unisantos.png" alt="unisantos" style="width:70%">
+        </div>
+        <div class="centro">
+          <img src="./assets/restaurante.png" alt="restaurante_escola"style="width:45%">
+        </div>
+        <div class="direita">
+          <img src="./assets/prefeitura_santos.png" alt="prefeitura_santos"style="width:70%">
+        </div>
+    </div>
+</header>
+
+<br>
+<br>
+<br>
+<br>
+
 <body class="body">
     <section>
         <header class="centralizar">
