--- a/src/app/main/documents/dismissal/dismissal.component.html
+++ b/src/app/main/documents/dismissal/dismissal.component.html
@@ -4,13 +4,32 @@
     <title>""</title>
     <meta charset="utf-8">
 </head>
+<header>
+    <div class="row">
+        <div class="esquerda">
+          <img src="./assets/unisantos.png" alt="unisantos" style="width:70%">
+        </div>
+        <div class="centro">
+          <img src="./assets/restaurante.png" alt="restaurante_escola"style="width:45%">
+        </div>
+        <div class="direita">
+          <img src="./assets/prefeitura_santos.png" alt="prefeitura_santos"style="width:70%">
+        </div>
+    </div>
+</header>
+
+<br>
+<br>
+<br>
+<br>
+
 <body class="body">
     <section>
-        <header class="centralizar">
+        <div class="centralizar">
             <div>
                 <h1>TERMO DE DESLIGAMENTO</h1>
             </div>
-        </header>
+        </div>
         <div>
             <br>
             <h3>Santos {{today | date:"longDate"}}</h3>
