--- a/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
+++ b/src/app/main/documents/enrollment-declaration/enrollment-declaration.component.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <title>""</title>
+    <title>DECLARACÃO DE MATRICULA</title>
     <meta charset="utf-8">
 </head>
-<body class="body">
-    <section>
-        <header class="centralizar">
-            <div>
+
+        <header>
+            <div class="row">
+                <div class="esquerda">
+                  <img src="./assets/unisantos.png" alt="unisantos" style="width:70%">
+                </div>
+                <div class="centro">
+                  <img src="./assets/restaurante.png" alt="restaurante_escola"style="width:45%">
+                </div>
+                <div class="direita">
+                  <img src="./assets/prefeitura_santos.png" alt="prefeitura_santos"style="width:70%">
+                </div>
+            </div>
+        </header>
+
+        <body class="body">
+            <div class="centralizar">
                 <h1>DECLARAÇÃO</h1>
                 <br/>
             </div>
-        </header>
+            <section>
         <div>
             <br>
             <p>Declaramos que {{studentData?.nome}} está em período de formação no curso 
