--- a/src/app/main/documents/image-prefecture/image-prefecture.component.html
+++ b/src/app/main/documents/image-prefecture/image-prefecture.component.html
@@ -4,9 +4,26 @@
     <title>""</title>
     <meta charset="utf-8">
 </head>
+
+<header>
+    <div class="row">
+        <div class="esquerda">
+          <img src="./assets/unisantos.png" alt="unisantos" style="width:70%">
+        </div>
+        <div class="centro">
+          <img src="./assets/restaurante.png" alt="restaurante_escola"style="width:45%">
+        </div>
+        <div class="direita">
+          <img src="./assets/prefeitura_santos.png" alt="prefeitura_santos"style="width:70%">
+        </div>
+    </div>
+</header>
+<br>
+<br>
+<br>
 <body class="body">
     <section>
-        <header class="centralizar">
+        <div class="centralizar">
             <div>
                 <h2>PREFEITURA MUNICIPAL DE SANTOS</h2>
                 <h4>Estância Balneária</h4>
@@ -14,7 +31,7 @@
                 <h2>TERMO DE AUTORIZAÇÃO DE USO DE IMAGEM</h2>
                 <br/>
             </div>
-        </header>
+        </div>
         <div>
             <p>1. Pelo presente instrumento, eu {{studentData?.nome}},  
          de {{studentData?.idade}} anos, portador(a) do CPF {{studentData?.cpf}} autorizo à PREFEITURA DE SANTOS, 
@@ -60,7 +77,7 @@
         </div>
         <div class = "centralizar">
             <h4>Santos {{today | date:"longDate"}}</h4>
-            <p>__________________________</p>
+            <p>______________________________</p>
             <p>{{studentData?.nome}}</p>
         </div>
     </section>
