--- a/src/app/main/documents/image-unisantos/image-unisantos.component.html
+++ b/src/app/main/documents/image-unisantos/image-unisantos.component.html
@@ -4,14 +4,34 @@
     <title>""</title>
     <meta charset="utf-8">
 </head>
+
+<header>
+    <div class="row">
+        <div class="esquerda">
+          <img src="./assets/unisantos.png" alt="unisantos" style="width:70%">
+        </div>
+        <div class="centro">
+          <img src="./assets/restaurante.png" alt="restaurante_escola"style="width:45%">
+        </div>
+        <div class="direita">
+          <img src="./assets/prefeitura_santos.png" alt="prefeitura_santos"style="width:70%">
+        </div>
+    </div>
+</header>
+
+<br>
+<br>
+<br>
+<br>
+
 <body class="body">
     <section>
-        <header class="centralizar">
+        <div class="centralizar">
             <div>
                 <h2>AUTORIZAÇÃO DE USO DE IMAGEM E SOM</h2>
                 <br/>
             </div>
-        </header>
+        </div>
         <div>
             <p>Eu {{studentData?.nome}}, portador da Carteira de 
                 Identidade/RG {{studentData?.rg}} e inscrito no CPF/MF sob nº {{studentData?.cpf}} cedo 
@@ -34,13 +54,14 @@
         </div>
         <div class = "centralizar">
             <h4>Santos {{today | date:"longDate"}}</h4>
-            <p>__________________________</p>
+            <br>
+            <p>______________________________</p>
             <p>{{studentData?.nome}}<br></p>
             <br>
         </div>
         <div>
-            <p>Tel. para contato: ________________________</p>
-            <p>E-mail: _________________________________________</p>
+            <p>Tel. para contato: {{studentData?.numeroWhatsapp}}</p>
+            <p>E-mail: {{studentData?.email}} </p>
             <br>
         </div>
         <div class="centralizar">
