--- a/src/app/main/documents/registration-form/registration-form.component.scss
+++ b/src/app/main/documents/registration-form/registration-form.component.scss
@@ -48,40 +48,38 @@ h2, h3, h4 {
 
 
 .dados_pessoais {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 10px;
-    padding: 10px;
-  }
-  
-  .dados_pessoais> div {
-    text-align: left;
-    font-size: 20px;
-  }
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-columns: minmax(100px, auto);
+}
 
-  .dados_pessoais_tel {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 10px;
-    padding: 10px;
-  }
-  
-  .dados_pessoais_tel > div {
-    text-align: left;
-    font-size: 20px;
-  }
+.dados_pessoais> div {
+  text-align: left;
+  font-size: 20px;
+}
 
-  .dados_pessoais_email {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 10px;
-    padding: 10px;
-  }
-  
-  .dados_pessoais_email > div {
-    text-align: left;
-    font-size: 20px;
-  }
+.dados_pessoais_tel {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-columns: minmax(100px, auto);
+}
+
+.dados_pessoais_tel > div {
+  text-align: left;
+  font-size: 20px;
+}
+
+
+.dados_pessoais_email {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-columns: minmax(100px, auto);
+}
+
+.dados_pessoais_email > div {
+  text-align: left;
+  font-size: 20px;
+}
 .escolaridade {
     gap: 10px;
     padding: 10px;
